--- a/package.json
+++ b/package.json
@@ -17,5 +17,14 @@
     "class-variance-authority": "^0.7.0",
     "@radix-ui/react-slot": "^1.0.2",
     "lucide-react": "^0.300.0"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
